Add About Me section

--- a/index.html
+++ b/index.html
@@ -20,4 +20,15 @@
         </ul>
       </section>
     </header>
+
+    <!-- Personal Description Section -->
+    <section>
+      <h2>About Me</h2>
+      <p>
+        I am a passionate software developer with a strong interest in startups and entrepreneurship. 
+        I love building innovative products from scratch and seeing ideas come to life through code. 
+        My goal is to work with dynamic startup teams where I can contribute to creating impactful solutions and grow as a full-stack developer.
+      </p>
+    </section>
+    
 </html>
