--- a/index.html
+++ b/index.html
@@ -30,5 +30,21 @@
         My goal is to work with dynamic startup teams where I can contribute to creating impactful solutions and grow as a full-stack developer.
       </p>
     </section>
+
+     <!-- Education Section -->
+    <section>
+      <h2>Education</h2>
+      
+      <article>
+        <h3>Technical University of Moldova</h3>
+        <p><em>Bachelor's Degree in Computer Science | 2023 - Present</em></p>
+        <p>
+          <strong>Favorite Course:</strong> Web Development - I particularly enjoyed learning HTML, CSS, and JavaScript, 
+          as it opened up the world of creating interactive web applications. Building my first responsive website 
+          was an exciting milestone that confirmed my passion for frontend development.
+        </p>
+      </article>
+    </section>
+
     
 </html>
