--- a/index.html
+++ b/index.html
@@ -46,5 +46,16 @@
       </article>
     </section>
 
+     <!-- Skills Section -->
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li><strong>Programming Languages:</strong> JavaScript, Python, HTML, CSS</li>
+        <li><strong>Frameworks & Libraries:</strong> Node.js, React, Express.js</li>
+        <li><strong>Tools & Platforms:</strong> Git, GitHub, VS Code, Linux</li>
+        <li><strong>Soft Skills:</strong> Problem-solving, Teamwork, Startup Mindset, Fast Learner</li>
+      </ul>
+    </section>
+
     
 </html>
