--- a/index.html
+++ b/index.html
@@ -57,5 +57,16 @@
       </ul>
     </section>
 
+     <!-- Interests Section -->
+    <section>
+      <h2>Interests</h2>
+      <ul>
+        <li>Startups & Entrepreneurship</li>
+        <li>Open Source Contribution</li>
+        <li>Technology Trends & Innovation</li>
+        <li>Hackathons & Coding Competitions</li>
+      </ul>
+    </section>
+
     
 </html>
