--- a/index.html
+++ b/index.html
@@ -68,5 +68,18 @@
       </ul>
     </section>
 
+    <!-- Job Section -->
+<section>
+  <h2>Career Objective</h2>
+  <p>
+    I am an aspiring mobile application developer with a strong interest in building 
+    high-quality apps for the App Store. I am passionate about creating intuitive, 
+    responsive, and user-focused applications using modern technologies like React 
+    and React Native. My goal is to contribute to a team where I can help design, 
+    develop, and publish innovative mobile applications that deliver real value to users. 
+    I am motivated to continuously improve my skills and grow as a professional app developer.
+  </p>
+</section>
+
     
 </html>
